adjusted fonts and colors to standout from bg

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <br>
                 <br> Click on an image to animate it! (click again to pause animation)
                 <br>[
-                <b>TIP:</b> Double click a gif to copy its link to the clipboard! ]
+                <b>Pro Tip:</b> Double click a gif to copy its link to the clipboard! ]
             </div>
         </div>
     </div>
