tested api functionality and updated button tags

--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
             </div>
             <div class="main">
             </div>
+
             <div class="tip">
-                <br>
-                <br> Click on an image to animate it! (click again to pause animation)
+            Click on an image to animate it! (click again to pause animation)
                 <br>[
                 <b>Pro Tip:</b> Double click a gif to copy its link to the clipboard! ]
             </div>
